@@ -1,2 +1,3 @@
 #!/bin/sh
-java -Xms512M -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot*.jar
+java -Xms1G -Xmx1G -XX:MaxPermSize=128M -jar /opt/minecraft/spigot*.jar --noconsole
+
